--- a/website/site-static/sass/_style.sass
+++ b/website/site-static/sass/_style.sass
@@ -205,7 +205,7 @@ table.front td
 
 /* ----------- container ------------
 
-#modhead
+#heading
   position: relative
   /* margin: 10px 250px 19px 0px */
   margin: 10px 0px 19px 0px
@@ -218,7 +218,7 @@ table.front td
     line-height: 30px
     padding: 22px 0px 18px 75px
 
-.modheadaction
+.headingaction
   margin-top: 19px
   float: right
   width: 200px
