refactoring navigation styles

--- a/website/site-static/sass/_style.sass
+++ b/website/site-static/sass/_style.sass
@@ -223,7 +223,7 @@ table.front td
   float: right
   width: 200px
 
-/* mod nav
+/* mod nav */
 
 #modnav
   margin: 0px 250px 6px 0px
@@ -258,7 +258,7 @@ table.front td
       text-decoration: none
       padding: 0px 7px 0px 7px
 
-/* codntent nav
+/* codntent nav */
 
 .contentnav
   margin: 0px 250px 6px 0px
@@ -275,7 +275,7 @@ table.front td
       text-decoration: none
       padding: 0px 7px 0px 7px
 
-/* codntentv
+/* codntentv */
 
 
 #splitpane-sidebar
