--- a/website/templates/_templates/layout_a.html
+++ b/website/templates/_templates/layout_a.html
@@ -3,7 +3,7 @@
 {% load cms_tags %}
 
 {% block cms_main %}
-	{% placeholder main %}
+	{% placeholder "main" or %}empty{% endplaceholder %}
 {% endblock %}
 
 
