--- a/website/apps/alibrary/templates/alibrary/release_list.html
+++ b/website/apps/alibrary/templates/alibrary/release_list.html
@@ -22,6 +22,10 @@
 
 
 	{% block tagcloud %}
+
+		{% include "alibrary/element/_tagcloud.html" %}
+	
+	<!--
 	<div style="padding: 2px 0px 15px; width: 730px; display: none;" id="tagcloud_inline" data-uistate="init" class="tagcloud inline ui-persistent">
 		<a href="/content/library/releases?page=1&amp;tags=12" class="tag1" style="">Abstract</a>
 		<a href="/content/library/releases?page=1&amp;tags=18" class="tag1" style="">Acoustic</a>
@@ -75,6 +79,7 @@
 		<a href="/content/library/releases?page=1&amp;tags=747" class="tag1" style="">World</a>
 		<div class="clear"></div>
 	</div>
+	-->
 	{% endblock %}
 					
 					
