checking tag-sizes

--- a/website/apps/alibrary/templates/alibrary/element/_tagcloud.html
+++ b/website/apps/alibrary/templates/alibrary/element/_tagcloud.html
@@ -10,7 +10,7 @@
 	
 	{% spurl base=request.get_full_path trigger_mquery="tags={{ tag.pk }}" as tag_url %}
 	
-	<a href="{{ tag_url }}" class="tag1{% if is_active %} on{% endif %}" style="">{{ tag }} | {{ tag.weight }} | {{ is_active }}</a>
+	<a href="{{ tag_url }}" class="tag{{ tag.weight }}{% if is_active %} on{% endif %}" style="">{{ tag }}</a>
 	
 	{% if forloop.last %}
 	<div class="clear"></div>
