--- a/website/apps/alibrary/templates/alibrary/release_list.html
+++ b/website/apps/alibrary/templates/alibrary/release_list.html
@@ -97,6 +97,9 @@
 			<div class="clear"></div>
 		</div>
 	</div>
+	
+	<div id="autocomplete_holder" class="autocomplete holder"></div>
+	
 	{% endblock %}
 					
 					
