--- a/website/templates/base/_common_script.html
+++ b/website/templates/base/_common_script.html
@@ -12,6 +12,7 @@
 	<!-- base css block -->
 
 	{% addtoblock "css" %}<link type="text/css" href="{{ STATIC_URL }}css/screen.css" rel="stylesheet" />{% endaddtoblock %}
+	{% addtoblock "css" %}<link type="text/css" href="{{ STATIC_URL }}css/temporary.css" rel="stylesheet" />{% endaddtoblock %}
 	
 
   
