--- a/website/templates/refactoring.html
+++ b/website/templates/refactoring.html
@@ -21,6 +21,9 @@
 	
 	<!-- start: body -->
 	<body id="body" class="base">
+		
+		<div id="dim_content" style="display: none;"></div>
+		
 		{% cms_toolbar %}
 		<!-- start: wrapper_main -->
 		<div id="wrapper_main">
