--- a/website/site-static/sass/_style.sass
+++ b/website/site-static/sass/_style.sass
@@ -23,6 +23,14 @@ $footer_fix-height: 20px
     cursor: pointer !important
   
   
+#body > #dim_content
+  position: absolute
+  width: 100%
+  height: 100%
+  background-color: black
+  z-index: 1000
+  opacity: 0.2
+  
   
 div#footer_fix
   position: scroll
