fixes & case-insensitive search

--- a/website/apps/alibrary/templates/alibrary/element/autocomplete.html
+++ b/website/apps/alibrary/templates/alibrary/element/autocomplete.html
@@ -1,7 +1,7 @@
 {% load thumbnail i18n truncate highlight %}
 <div class="result">
 	<div class="search">
-		<h1>Search</h1>
+		<h1>Search [Hit "Enter"]</h1>
 		<p>
 			Search Library for: "{{ query }}"
 			[ Results: {{ result|length }} ]
