--- a/website/site-static/sass/_listview.sass
+++ b/website/site-static/sass/_listview.sass
@@ -4,6 +4,7 @@
   border-bottom: 1px solid #bbb
   font-size: 90%
   height: 20px
+  margin-top: 36px
   p.pagination
     padding: 0 0 0 0
 	
@@ -637,8 +638,11 @@
 
 /* ---------- tagbar/search ----------
 .searchbar
-  border-top: 1px solid #fff
-  margin-top: -1px
+  //border-top: 1px solid #fff
+  //margin-top: -1px
+  position: absolute
+  width: 100%
+  z-index: 1002
   #searchbar_input
     border: 0px none
     background: none repeat scroll 0% 0% transparent
