--- a/website/apps/alibrary/templates/alibrary/release/sidebar/context/_edit.html
+++ b/website/apps/alibrary/templates/alibrary/release/sidebar/context/_edit.html
@@ -1,11 +1,11 @@
+{% load i18n %}
+
 <div id="menu_context" class="menu_context">
 	<div class="set">
 		<ul class="unstyled">
 			
-			<!-- Menu element / Action -->
-			
 			<li class="link ">
-				<span class="left icon"> <a href="edit" title="Upload Content">Cancel Edit</a> </span>
+				<span class="left icon"> <a href="edit" title="{% trans "Cancel Edit" %}">{% trans "Cancel Edit" %}</a> </span>
 				<span class="opt"></span>
 				<span class="clear"></span>
 			</li>
