--- a/website/site-static/sass/_style.sass
+++ b/website/site-static/sass/_style.sass
@@ -1488,6 +1488,9 @@ a#tagcloud_inline_toggle
     background-image: url(/static/img/prototype/tag_bg_s.png)
     background-repeat: no-repeat
     background-position: bottom right
+    &.clear-search
+      background: none
+      border: none
     &.tbsearch
       color: $main-a
       border-top: 1px solid #fff
