auto complete integration (django-selectable) http://django-selectable.readthedocs.org/en/latest/index.html

--- a/website/apps/alibrary/templates/alibrary/release/sidebar/context/_detail.html
+++ b/website/apps/alibrary/templates/alibrary/release/sidebar/context/_detail.html
@@ -7,7 +7,7 @@
 			<!-- Menu element / Action -->
 			
 			<li class="link ">
-				<span class="left icon"><a href="edit" title="{% trans "Edit" %}">{% trans "Edit" %}</a></span>
+				<span class="left icon"><a href="{{ object.get_edit_url }}" title="{% trans "Edit" %}">{% trans "Edit" %}</a></span>
 				<span class="opt"></span>
 				<span class="clear"></span>
 			</li>
