--- a/website/apps/alibrary/templates/alibrary/release/sidebar/context/_edit.html
+++ b/website/apps/alibrary/templates/alibrary/release/sidebar/context/_edit.html
@@ -5,7 +5,7 @@
 		<ul class="unstyled">
 			
 			<li class="link ">
-				<span class="left icon"> <a href="edit" title="{% trans "Cancel Edit" %}">{% trans "Cancel Edit" %}</a> </span>
+				<span class="left icon"> <a href="{{ object.get_absolute_url }}" title="{% trans "Cancel Edit" %}">{% trans "Cancel Edit" %}</a> </span>
 				<span class="opt"></span>
 				<span class="clear"></span>
 			</li>
