--- a/website/templates/base/_common_script.html
+++ b/website/templates/base/_common_script.html
@@ -14,6 +14,14 @@
 	{% addtoblock "css" %}<link type="text/css" href="{{ STATIC_URL }}css/screen.css" rel="stylesheet" />{% endaddtoblock %}
 	{% addtoblock "css" %}<link type="text/css" href="{{ STATIC_URL }}css/temporary.css" rel="stylesheet" />{% endaddtoblock %}
 	
+	
+	{% addtoblock "css" %}<!--<link type="text/css" href="{{ STATIC_URL }}css/lib/jquery-ui-1.8.23.custom.css" rel="stylesheet" />-->{% endaddtoblock %}
+	
+	{% addtoblock "css" %}<link type="text/css" href="{{ STATIC_URL }}selectable/css/dj.selectable.css" rel="stylesheet" />{% endaddtoblock %}
+	
+	
+	
+	
 
   
   	<!-- js-pre, rendered BEFORE the default "js" block -->
@@ -29,7 +37,9 @@
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.cookie.min.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.jgrowl.min.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.ajaxqueue.js"></script>{% endaddtoblock %}
-	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.autocomplete.js"></script>{% endaddtoblock %}
+	
+	{% addtoblock "js-post" %}<!--<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.autocomplete.js"></script>-->{% endaddtoblock %}
+	
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.daterangepicker.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.countdown.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.smartupdater.js"></script>{% endaddtoblock %}
@@ -63,6 +73,7 @@
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/aplayer.base.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/aplayer.ui.js"></script>{% endaddtoblock %}
 	
-	
+	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}selectable/js/jquery.dj.selectable.js"></script>{% endaddtoblock %}
 
+	
 
