--- a/website/site-static/sass/_asite.sass
+++ b/website/site-static/sass/_asite.sass
@@ -37,6 +37,10 @@
 @import asite/forms_extra
 @import bootstrap/tables
 
+// WMD
+@import asite/wmd
+
+
 // Components: common
 @import bootstrap/sprites
 @import bootstrap/dropdowns
