--- a/website/site-static/sass/_toolbar.sass
+++ b/website/site-static/sass/_toolbar.sass
@@ -93,8 +93,14 @@ div.navbar .container
       margin: 0px 0px 4px 8px
     
 
-
-
+div.navbar .container
+  .nav-profile
+    .messages
+      span.icon-label
+        color: #fff
+        padding-left: 3px
+        font-size: 10px
+        //font-weight: bold
 
 /* ---------- subnav ----------
 
