--- a/website/templates/skeleton/toolbar.html
+++ b/website/templates/skeleton/toolbar.html
@@ -4,16 +4,24 @@
 		<div class="navright">
 			<div class="right">
 				<!-- account section -->
-				<ul id="nav" class="horizontal unstyled"> 
+				<ul id="nav" class="horizontal unstyled nav-profile"> 
 			
 					{% if user.is_authenticated %}
 			        	<li><a href="{% url account_logout %}?next={{ request.get_full_path }}"><span>{% trans 'Signout' %}</span></a></li>
+			        	<!--
 			        	<li><a href="{% url account_email %}"><span>{% trans 'Account' %} [{{ user.username }}]</span></a></li>
+			        	-->
+			        	<li><a href="{% url profiles-profile-detail user %}"><span>{% trans 'Profile' %} [{% firstof user.get_full_name user.username %}]</span></a></li>
+			        	
+			        	
+						
+			        	
+			        	
 			        	{% if user.is_staff %}
 						<li><a href="/admin/"><span>{% trans 'Administration' %}</span></a></li>
 						{% endif %}
 						{% if notice_unseen_count > 0 %}
-						<li><a href="#">{% trans 'Messages' %}: {{ notice_unseen_count }}</a></li>
+						<li class="messages"><a href="#"><i class="icon-comment icon-white"></i><span class="icon-label">{{ notice_unseen_count }}</span></a></li>
 						{% endif %}
 					{% else %}
 			        	<li><a title="Login" href="{% url account_login %}?next={{ request.get_full_path }}" rel="modal:open"><span>{% trans 'Login' %}</span></a></li>
