added importer blueprints

--- a/website/site-static/sass/site/_variables.sass
+++ b/website/site-static/sass/site/_variables.sass
@@ -22,6 +22,7 @@ $grayDark: #333333 !default
 $gray: #555555 !default
 $grayLight: #cccccc !default
 $grayLighter: #eeeeee !default
+$grayLightest: #fafafa !default
 $white: white !default
 
 // Accent colors
