--- a/website/templates/skeleton/modnav.html
+++ b/website/templates/skeleton/modnav.html
@@ -6,11 +6,13 @@
 
 	</ul>
 	
+	{% if tagcloud %}
 	<ul class="unstyled pull-right">
 		<li>
 			<a href="#" style="border-right: none;" class="" id="tagcloud_inline_toggle">Tagcloud</a>
 		</li>
 	</ul>
+	{% endif %}
 	
 	<div class="clearfix"></div>
 
