--- a/website/apps/alibrary/templates/alibrary/release_edit.html
+++ b/website/apps/alibrary/templates/alibrary/release_edit.html
@@ -5,6 +5,8 @@
 {% load thumbnail i18n truncate %}
 
 {% block heading %} <!-- heading / icon (large one) -->
+{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}selectable/js/jquery.dj.selectable.js"></script>{% endaddtoblock %}
+{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}ac_tagging/js/jquery.tag-it.js"></script>{% endaddtoblock %}
 {% addtoblock "js-post" %}{% dajaxice_js_import %}{% endaddtoblock %}
 {% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}dajax/jquery.dajax.core.js"></script>{% endaddtoblock %}
 <div id="heading">
