--- a/website/apps/profiles/templates/profiles/profile_form.html
+++ b/website/apps/profiles/templates/profiles/profile_form.html
@@ -2,9 +2,11 @@
 
 {% block title %}Profile form{% endblock %}
 
-{% load crispy_forms_tags i18n %}
+{% load crispy_forms_tags i18n sekizai_tags %}
 
 {% block heading %}
+{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}selectable/js/jquery.dj.selectable.js"></script>{% endaddtoblock %}
+{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}ac_tagging/js/jquery.tag-it.js"></script>{% endaddtoblock %}
 <!-- heading / icon (large one) -->
 <div id="heading">
 	{% with page_title="Profile" %}
