--- a/website/apps/importer/templates/importer/import_form_jquery.html
+++ b/website/apps/importer/templates/importer/import_form_jquery.html
@@ -109,7 +109,7 @@ $(document).ready(function() {
 	        maxFileSize: 1000000000, // 1000 MB
 	        minFileSize: 200000,
 	        acceptFileTypes: /(\.|\/)(mp3|aif?f|wav|avi|flac|mp4|ogg|jpe?g)$/i,
-	        limitConcurrentUploads: 2
+	        limitConcurrentUploads: 10
 	   };
 	   
 	   importer.ui.init();
@@ -190,6 +190,10 @@ $(document).ready(function() {
 <!-- The template to handle the musicbrainz results -->
 <script id="template-result-musicbrainz" type="text/x-tmpl">
 {% straight_include "importer/template-result-musicbrainz.html" %}
+</script>
+
+<script id="template-result-imported" type="text/x-tmpl">
+{% straight_include "importer/template-result-imported.html" %}
 </script>
 
 
