--- a/website/site-static/sass/_asite.sass
+++ b/website/site-static/sass/_asite.sass
@@ -45,7 +45,8 @@
 
 
 // Components: common
-@import bootstrap/sprites
+// @import bootstrap/sprites
+@import bootstrap/addons/font-awesome
 @import bootstrap/dropdowns
 @import bootstrap/wells
 @import bootstrap/dim
