--- a/website/templates/importer/template-import.html
+++ b/website/templates/importer/template-import.html
@@ -1,6 +1,50 @@
 <div id="importfile_result_{%=o.id%}" class="importfile item">
 
-	<h3><i class="icon-barcode"></i> {%=o.filename%} <small>[{%=o.mimetype%}]</small></h3>
+	<h3><i class="icon-file"></i> {%=o.filename%} <small>[{%=o.mimetype%}]</small></h3>
+	
+	<div class="row-fluid status status-queue">
+		<div class="span1">&nbsp;</div>
+
+		<div class="span8 information">
+
+			<h4>Importing <i class="icon icon-padded icon-cogs"></i></h4>
+			<p>File placed in the import-queue.<br />Please be patient for a while.</p>
+			
+		</div>
+		
+		<div class="span3 image">
+			<div class="pull-right">
+				<i class="ajax-loader c3CA3B9"></i>
+			</div>
+		</div>
+		
+		
+	</div>
+	
+	
+	
+	<div class="row-fluid status status-duplicate">
+		
+		<div class="span1">&nbsp;</div>
+		<div class="span11">
+			<h4>Duplicate <i class="icon icon-padded icon-copy"></i></h4>
+			<p>This file already exists in the Database.</p>
+		</div>
+	</div>
+	
+	
+	
+	<div class="row-fluid status status-imported">
+		
+		<div class="span1"><i class="icon icon-padded icon-file"></i></div>
+		<div class="span3">4</div>
+		<div class="span8 display">
+
+			
+			
+		</div>
+	</div>
+	
 	<!--<p>Status</p>-->
 
 	<div class="row-fluid result-set hoverable provider-tag">
@@ -86,7 +130,7 @@
 
 		<form class="form-horizontal form-result">
 			<h4>Result</h4>
-			<div class="row-fluid">
+			<div class="row-fluid base">
 
 				<div class="span6">
 
@@ -142,7 +186,7 @@
 
 			</div>
 			<h4>Musicbrainz IDs</h4>
-			<div class="row-fluid">
+			<div class="row-fluid musicbrainz">
 
 				<div class="span6">
 
@@ -182,35 +226,12 @@
 	<div class="row-fluid pull-righ result-actions">
 
 		<div class="span9">
-			<!--
-			{% for (var i=0, message; message=o.messages[i]; i++) { %}
-			<p><span>{%=message.key%}:</span> {%=message.content%}</p>
-			{% } %}-->
 			&nbsp;
 		</div>
 
-		<div class="btn-group pull-right span3">
-			<button class="btn btn-mini btn-prrimary">
-				Actions
-			</button>
-			<button class="btn btn-mini  btn-prrimary dropdown-toggle" data-toggle="dropdown">
-				<span class="caret"></span>
-			</button>
-			<ul class="dropdown-menu">
-				<li>
-					<a href="}">Detail</a>
-				</li>
-				<li>
-					<a href="#">Another action</a>
-				</li>
-				<li>
-					<a href="#">Something else here</a>
-				</li>
-				<li class="divider"></li>
-				<li>
-					<a href="#">Separated link</a>
-				</li>
-			</ul>
+		<div class="pull-right span3">
+			<a class="btn btn-secondary btn-small delete-importfile">Delete this File</a>
+			<a class="btn btn-primary btn-small start-import">Start Import</a>
 		</div>
 	</div>
 
